# FoxUIBase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: clean.bat  configure.bat  configure.sh
src/: FoxImgui.cpp  FoxImgui.h  main.cpp
